docker/production/templates/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    app: phpmyadmin
